fixed html height overflow issue

--- a/src/components/Users.css
+++ b/src/components/Users.css
@@ -100,6 +100,10 @@
 /* Rewrite Bootstrap class */
 
 /* My Own Class */
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Karla", sans-serif !important;
 }
